# angola_geo

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CLI_GUIDE.md  CONTRIBUTING.md  LICENSE  README.md  REFERENCES.md  pyproject.toml
.github/workflows/: deploy-docs.yml
angola_geo/: __init__.py  cli.py  core.py  excecoes.py  exceptions.py
angola_geo/data/: divisions.json
docs/: README.md  docusaurus.config.ts  sidebars.ts
docs/blog/: 2026-02-12-bem-vindo.md  authors.yml  tags.yml
docs/docs/: guia-rapido.md  instalacao.md  intro.md
docs/docs/api/: overview.md  reference.md
docs/docs/cli/: overview.md
examples/: basic_usage.py
tests/: test_angola_geo.py  test_cli.py
